# networkupdater

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  network_updater.cpp
include/: network_updater.hpp
resources/: input.csv  versions.json
src/: main.cpp  network_updater.cpp
test/: CMakeLists.txt  http_test_server.cpp  http_test_server.hpp  main.cpp  network_updater_test.cpp
test/headers/: 200.txt  401.txt  404.txt  409.txt
